--- a/src/main/java/com/mycompany/veritabaniproje/RegisterPage.form
+++ b/src/main/java/com/mycompany/veritabaniproje/RegisterPage.form
@@ -32,7 +32,9 @@
                   <Component id="jLabel6" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jTextFieldRegisterPhone" alignment="0" pref="189" max="32767" attributes="0"/>
                   <Component id="jTextFieldRegisterTc" alignment="0" max="32767" attributes="0"/>
@@ -40,7 +42,7 @@
                   <Component id="jTextFieldRegisterName" alignment="0" max="32767" attributes="0"/>
                   <Component id="jPasswordFieldRegister" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="119" max="32767" attributes="0"/>
+              <EmptySpace pref="136" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -71,6 +73,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jTextFieldRegisterPhone" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -150,6 +153,11 @@
           <Color blue="66" green="66" red="0" type="rgb"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel3">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="+90"/>
       </Properties>
     </Component>
   </SubComponents>
